extend serial logging